--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -52,18 +52,6 @@
     <Filter Include="ヘッダー ファイル\PowerUp">
       <UniqueIdentifier>{88bedcf7-a7eb-409d-9ec6-912d77eb3120}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Node">
-      <UniqueIdentifier>{fa511455-1997-47b5-b2a4-9faa8fec00f6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダー ファイル\Node">
-      <UniqueIdentifier>{744e79e3-b9aa-4477-948b-7d04ac14bb49}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\PowerUp">
-      <UniqueIdentifier>{f8b10665-6ece-49d1-abae-cb623b127e77}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダー ファイル\PowerUp">
-      <UniqueIdentifier>{88bedcf7-a7eb-409d-9ec6-912d77eb3120}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\main.cpp">
@@ -204,50 +192,8 @@
     <ClCompile Include="Source\NPC\PowerUpCave.cpp">
       <Filter>ソース ファイル\PowerUp</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Base\BaseEnemy.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Player\PlayerLegNormal.cpp">
-      <Filter>ソース ファイル\player</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Deal\ItemShop.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Player\PlayerAttackGun.cpp">
-      <Filter>ソース ファイル\player</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Player\PlayerAttackSpider.cpp">
-      <Filter>ソース ファイル\player</Filter>
-    </ClCompile>
-    <ClCompile Include="BaseNode.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Enemy\BaseEnemy.cpp">
-      <Filter>ソース ファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\BattleNode.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\HealingNode.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\NodeManager.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\ReinforcementNode.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\ShopNode.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\TransactionNode.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\BaseNode.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Node\StartNode.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Source\NPC\ATKUpCave.cpp">
+      <Filter>ソース ファイル\PowerUp</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -397,6 +343,21 @@
     </ClInclude>
     <ClInclude Include="ThirdParty\magic_enum.hpp">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\NPC\DealDaemon.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\NPC\NPC.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\NPC\NPCManager.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\NPC\PowerUpCave.h">
+      <Filter>ヘッダー ファイル\PowerUp</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\NPC\ATKUpCave.h">
+      <Filter>ヘッダー ファイル\PowerUp</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
